# 42_RTv1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  make_linux.sh  update_srcs.sh
cmake/: FindSDL2.cmake
greedy/: cylinder.c  loop.c  pf_makefile
include/: color.h  rt.h  rt_camera.h  rt_camera_s.h  rt_num.h  rt_num_s.h  rt_parser.h  rt_s.h  rt_scene.h  rt_scene_s.h  rt_struct.h  rt_texture_s.h  rt_trace.h  rt_utils.h  rt_utils_s.h  rt_vector.h  rt_vector_s.h  rtv1.h  scene.h  vector.h
libft/: CMakeLists.txt  Makefile
libft/include/: libft.h  printf.h
libft/src/: ft_abs.c  ft_bzero.c  ft_char_to_str.c  ft_free.c  ft_free_char_2d_arr.c  ft_pow.c  ft_power_ten.c  ft_return.c  ft_tolower.c  ft_toupper.c  ft_word_count.c
libft/src/atoi_itoa/: ft_atod.c  ft_atof.c  ft_atoi.c  ft_atoi_base.c  ft_atold.c  ft_itoa.c  ft_itoa_base.c  ft_ldtoa.c  ft_ldtoa_prec.c  ft_lltoa.c  ft_mtob.c  ft_mtob_raw.c  ft_ulltoa.c  ft_utoa.c  ft_utoa_base.c
libft/src/file/: ft_file_read.c
libft/src/gnl/: get_next_line.c
libft/src/is/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_iscomment.c  ft_isdigit.c  ft_isnum.c  ft_isprint.c
libft/src/lst/: ft_lstadd.c  ft_lstappend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
libft/src/mem/: ft_free.c  ft_mem_rev.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memdup.c  ft_memmove.c  ft_memset.c  ft_realloc.c
libft/src/printf/: f_after_dot.c  f_good_way_after.c  f_good_way_before.c  f_special.c  flags_c.c  flags_di.c  flags_f.c  flags_o.c  flags_p.c  flags_perc.c  flags_s.c  flags_u.c  flags_x.c  parse_flags.c  printf.c  resolve_arg.c  width_format.c
libft/src/put/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putendl_free.c  ft_putendl_int_var.c  ft_puterr_null.c  ft_puterror.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putstr_free.c
libft/src/str/: ft_str_add.c  ft_str_count.c  ft_str_div_by.c  ft_str_div_by_ins.c  ft_str_dup_rev.c  ft_str_low.c  ft_str_next_is.c  ft_str_spam.c  ft_str_up.c  ft_strcat.c  ft_strcfnr.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_strfnr.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strjoin_free.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strrev.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strsub_free.c  (+1 more)
libft/src/test/: insert_func.c  insert_mem.c
libsdl/: Makefile
libsdl/SDL2-2.0.10-source/: CMakeLists.txt  configure
libsdl/SDL2-2.0.10-source/build-scripts/: config.guess
libsdl/SDL2-2.0.10-source/include/: SDL_hints.h  SDL_main.h  SDL_sensor.h  SDL_stdinc.h
libsdl/SDL2-2.0.10-source/src/core/winrt/: SDL_winrtapp_direct3d.cpp  SDL_winrtapp_xaml.cpp
libsdl/SDL2-2.0.10-source/src/joystick/: SDL_gamecontrollerdb.h
libsdl/SDL2-2.0.10-source/src/joystick/hidapi/: SDL_hidapi_ps4.c
libsdl/SDL2-2.0.10-source/src/main/haiku/: SDL_BApp.h
libsdl/SDL2-2.0.10-source/src/stdlib/: SDL_malloc.c
libsdl/SDL2-2.0.10-source/src/video/android/: SDL_androidmouse.c
libsdl/SDL2-2.0.10-source/src/video/cocoa/: SDL_cocoaevents.m
libsdl/SDL2-2.0.10-source/src/video/khronos/vulkan/: vulkan.hpp
libsdl/SDL2-2.0.10-source/src/video/windows/: SDL_windowswindow.c
libsdl/SDL2-2.0.10-source/src/video/winrt/: SDL_winrtevents.cpp  SDL_winrtgamebar.cpp  SDL_winrtkeyboard.cpp  SDL_winrtmouse.cpp  SDL_winrtopengles.cpp  SDL_winrtpointerinput.cpp  SDL_winrtvideo.cpp  SDL_winrtvideo_cpp.h
libsdl/SDL2-2.0.10-source/test/: configure  testhaptic.c  testnative.h  testrumble.c  testvulkan.c
scenes/: another.rts  check_spec.rts  default.rts  default.scene  default_old2.rts  example.rts  example.scene  intra_1.rts  intra_2.rts  intra_3.rts  intra_4.rts  intra_5.rts
src/: camera.c  color.c  destroy.c  double3.c  events.c  events_1.c  events_2.c  infinity.c  loop.c  main.c  project.c  rt.c  rtv1_init.c  scene.c  texture.c  trace.c  utils.c  window.c
src/camera/: camera.c  project.c
src/figures/: cylinder.c  figures.c  plane.c  sphere.c
src/pbr/: brdf.c  ggx.c  ggx_gd.c  schlick.c
src/scene/: cylinder.c  figures.c  lights.c  plane.c  rt_add_scene.c  rt_camera_to_str.c  rt_figure_to_str.c  rt_light_to_str.c  rt_material_to_str.c  rt_scene.c  rt_scene_to_str.c  scene.c  sphere.c
src/scene/parse/: add_camera.c  add_figure.c  add_light.c  add_material.c  comments.c  read_comma.c  read_id.c  read_num.c  read_vec.c  scene_from_file.c
src/test/: test_dist.c  test_time.c  test_trace.c
src/trace/: rt_trace.c  rt_trace_modes.c  trace_dot_cone.c  trace_dot_cylinder.c  trace_dot_plane.c  trace_dot_sphere.c  trace_normal_cone.c  trace_normal_cylinder.c  trace_normal_plane.c  trace_normal_sphere.c
src/utils/: clamp.c  color.c  color_1.c  color_2.c  destroy.c  double3.c  double3_str.c  human_1.c  infinity.c  num_1.c  num_2.c  ray.c  smart_array.c  utils.c  vector_1.c  vector_2.c  vector_3.c  vector_4.c  vector_5.c  vector_6.c  vector_7.c  vector_8.c  vector_math.c
test/: test_dist.c  test_trace.c
